# godll

./: .gitignore  README.md  build.bat  build.sh  library.cpp  library.h  linux.go  main.go  test.cpp  test.h  win.go
lib/: CMakeLists.txt  CMakeSettings.json  go.mod  library.cpp  library.h  test.cpp  test.h
lib/linux/: linux.go  linux_library.cpp  linux_library.h  linux_library_test.cpp
lib/shared/: defs.h
lib/win/: win_library.cpp  win_library.h  win_library_test.cpp
